karaf-itests: allow to set max permgen size and allow to keep PaxExam runtime folder
 * closes #177